# mellea-contribs

./: CI_REFACTOR_IMPLEMENTATION.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  README_mellea_contrib.md  RELEASE_QUICK_START.md  RELEASE_TESTING.md  RELEASING.md  pyproject.toml  run_tests.sh  test_va.py
.github/: CODEOWNERS  smoke-matrix.json
.github/bot-state/: _integration_core.json  dspy.json
.github/scripts/: auto_issue_bot.py  discover_subpackages.py  grandfather_legacy.json  open_per_package_bump_prs.py  parse_release_tag.py  test_auto_issue_bot.py  validate_build.py  (+6 more)
_integration_core/: README.md  pyproject.toml
_integration_core/examples/: README.md
_integration_core/mellea_contribs/_integration_core/: __init__.py
_integration_core/mellea_contribs/_integration_core/core/: __init__.py  base.py  tool_converter.py  types.py
_integration_core/tests/: __init__.py  test_base.py  test_message_converter.py  test_tool_converter.py
agent-utilities/: OWNERS  README.md  pyproject.toml
agentstack_platform/: agentstack_platform.py  agentstack_readme.md
config/: benchdrift_config.yaml  model_config.yaml
cookiecutter/: cookiecutter.json  core_paths.json
cookiecutter/{{cookiecutter.dir_name}}/: OWNERS  README.md  pyproject.toml
cookiecutter/{{cookiecutter.dir_name}}/examples/: basic_usage.py
cookiecutter/{{cookiecutter.dir_name}}/tests/: test_smoke.py
crewai/: README.md  pyproject.toml
crewai/examples/: async_usage_example.py  basic_usage.py  multi_agent_crew_example.py  requirements_example.py  streaming_example.py  tool_usage_example.py  validator_usage_example.py
crewai/mellea_contribs/crewai/: __init__.py
crewai/mellea_contribs/crewai/core/: __init__.py  llm.py  message_conversion.py  tool_conversion.py  validators.py
crewai/tests/: conftest.py  test_llm.py  test_message_conversion.py  test_tool_conversion.py  test_validators.py
crewai/tests/integration/: test_integration_crew.py  test_validators_integration.py
docs/: INSTRUCTION_REPLACEMENT.md  ROBUSTNESS_TESTING.md  ROBUSTNESS_TESTING_SETUP.md
dspy/: OWNERS  README.md  pyproject.toml
integrations/: INTEGRATION_TESTS.md  Makefile  README.md  pytest.ini  requirements-integration-tests.txt  run_integration_tests.py
integrations/dspy/: README.md  pyproject.toml
integrations/dspy/examples/: 02_requirements_validation.py  03_sampling_strategies.py  07_ollama_granite.py  09_refine_verification.py  10_hybrid_approach.py  README.md
integrations/dspy/src/mellea_dspy/: __init__.py  lm.py  message_conversion.py  verification.py
integrations/dspy/tests/: test_lm.py
integrations/dspy/tests/integration/: __init__.py  conftest.py  test_basic.py  test_dspy_modules.py  test_requirements_live.py  test_strategy_live.py  test_verification_live.py
integrations/dspy/tests/unit/: __init__.py  test_lm.py  test_message_conversion.py  test_requirements.py  test_strategy.py
integrations/langchain/: GETTING_STARTED.md  README.md  pyproject.toml
integrations/langchain/examples/: output_parser_basic.py  streaming_example.py  tools_example.py
integrations/langchain/src/mellea_langchain/: __init__.py  chat_model.py  guardrails.py  message_conversion.py  tool_conversion.py
integrations/langchain/tests/: test_agent_integration.py  test_chat_model.py  test_concurrency.py  test_guardrails.py  test_message_conversion.py  test_tool_conversion.py  test_tool_conversion_enhanced.py
integrations/langchain/tests/integration/: __init__.py  test_guardrails_integration.py  test_langchain_integration.py
integrations/mellea-integration-core/: README.md  pyproject.toml
integrations/mellea-integration-core/src/mellea_integration/: __init__.py  base.py  message_converter.py  tool_converter.py  types.py
integrations/mellea-integration-core/tests/: __init__.py  test_base.py  test_message_converter.py  test_tool_converter.py
langchain/: OWNERS  README.md  pyproject.toml
langchain/examples/: async_example.py  basic_usage.py  guardrail_usage.py  langchain_chain.py  output_parser_basic.py  requirements_strategy_example.py  tools_example.py
langchain/mellea_contribs/langchain/: __init__.py
langchain/mellea_contribs/langchain/core/: __init__.py  chat_model.py  guardrails.py  message_conversion.py  tool_conversion.py
langchain/tests/: __init__.py  test_agent_integration.py  test_chat_model.py  test_concurrency.py  test_guardrails.py  test_message_conversion.py  test_tool_conversion.py  test_tool_conversion_enhanced.py
langchain/tests/integration/: __init__.py  test_guardrails_integration.py  test_langchain_integration.py
mellea_contribs/crewai_backend/: README.md  pyproject.toml
mellea_contribs/crewai_backend/examples/: async_usage_example.py  basic_usage.py  multi_agent_crew_example.py  requirements_example.py  streaming_example.py  validator_usage_example.py
mellea_contribs/crewai_backend/src/mellea_crewai/: tool_conversion.py  validators.py
mellea_contribs/crewai_backend/tests/: test_message_conversion.py  test_validators.py
mellea_contribs/crewai_backend/tests/integration/: test_integration_crew.py  test_validators_integration.py
mellea_contribs/mcp_tools/: README.md  pyproject.toml
mellea_contribs/mcp_tools/examples/: github_activity_summary.py
mellea_contribs/mcp_tools/src/mellea_mcp/: __init__.py  connections.py  tools.py
mellea_contribs/mcp_tools/tests/: test_connections.py  test_tools.py
reqlib/: OWNERS  README.md  pyproject.toml
reqlib/mellea_contribs/reqlib/: __init__.py
reqlib/mellea_contribs/reqlib/stdlib/reqlib/: citation_exists.py  import_repair.py  is_appellate_case.py  statute_data.py
reqlib/tests/: conftest.py
reqlib/tests/grounding_context/: test_grounding_context_formatter.py
reqlib/tests/legal/: test_citation_exists.py  test_is_appellate_case.py
reqlib/tests/python_imports/: test_import_repair.py
test/: 1_test_robustness_testing.py  2_test_instruction_replacement.py  test_citation_exists.py  test_double_round_robin.py  test_grounding_context_formatter.py  test_import_repair.py  test_is_appellate_case.py  test_mprogram_robustness.py  test_python_auto_fixing.py
(+228 files in other folders)
