[project]
name = "mellea-contribs-crewai"
version = "0.1.0"
description = "CrewAI integration for Mellea — enables CrewAI agents to use Mellea's generative programming capabilities."
readme = "README.md"
# Capped at <3.14 because crewai's transitive dep chromadb pulls in a
# pydantic v1 module that's incompatible with Python 3.14+. Lift the cap
# once chromadb supports 3.14 (see chroma-core/chroma issues).
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Mellea Contributors" }]
keywords = ["mellea", "contribs", "crewai", "llm", "generative-programming", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mellea>=0.3.0",
    "mellea-contribs-integration-core",
    "crewai>=0.1.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/generative-computing/mellea"
Repository = "https://github.com/generative-computing/mellea-contribs"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mellea_contribs"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
mellea-contribs-integration-core = { path = "../_integration_core" }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.mellea-contribs.ci]
skip_ollama = false
timeout_minutes = 90
python_versions = ["3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, hermetic",
    "integration: requires local services",
    "e2e: end-to-end against an LLM",
    "qualitative: checks LLM output quality",
]
