[project]
name = "mellea-contribs-reqlib"
version = "0.0.1"
description = "Domain-specific Requirement recipes for Mellea's Instruct-Validate-Repair patterns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mellea Contributors" }]
keywords = ["mellea", "contribs", "requirements", "reqlib", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mellea[litellm]>=0.3.2",
    "rapidfuzz>=3.14.3",
    "eyecite",
    "citeurl",
    "playwright",
    "markdown",
    "requests",
]

[project.urls]
Homepage = "https://github.com/generative-computing/mellea"
Repository = "https://github.com/generative-computing/mellea-contribs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mellea_contribs"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.mypy]
# Subpackages live under the mellea_contribs namespace; explicit_package_bases lets
# mypy resolve modules via the namespace root. ignore_errors keeps the gate non-blocking
# while subpackage owners triage their own type debt; flip it off per package once
# cleaned up.
explicit_package_bases = true
ignore_errors = true
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
# tests/legal/test_citation_exists.py uses `from ... import *` to pull in the
# module under test, which trips F403 (undefined-local-with-import-star) and
# F405 (undefined-local-with-import-star-usage) on every helper it touches.
# Suppressed here so CI is unblocked; reqlib OWNERS should refactor to
# explicit imports as a follow-up.
"tests/legal/test_citation_exists.py" = ["F403", "F405"]

[tool.mellea-contribs.ci]
skip_ollama = false
timeout_minutes = 30
python_versions = ["3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, hermetic",
    "integration: requires local services",
    "e2e: end-to-end against an LLM",
    "qualitative: checks LLM output quality",
]
