[project]
name = "mellea-contribs-{{ cookiecutter.dir_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "{{ cookiecutter.owner_name }}", email = "{{ cookiecutter.owner_email }}" }]
keywords = ["mellea", "contribs", "{{ cookiecutter.name }}"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mellea>={{ cookiecutter.mellea_version }}",
    # Add subpackage-specific dependencies here.
]

[project.urls]
Homepage = "https://github.com/generative-computing/mellea"
Repository = "https://github.com/generative-computing/mellea-contribs"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mellea_contribs"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.mellea-contribs.ci]
skip_ollama = false
timeout_minutes = 30
python_versions = ["3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, hermetic",
    "integration: requires local services",
    "e2e: end-to-end against an LLM",
    "qualitative: checks LLM output quality",
]
