[project]
name = "mellea-crewai"
version = "0.1.0"
description = "CrewAI integration for Mellea - enables CrewAI agents to use Mellea's generative programming capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "IBM Research", email = "mellea@ibm.com" }
]
keywords = ["mellea", "crewai", "llm", "generative-programming", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mellea>=0.3.0",
    "mellea-integration-core",
    "crewai>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/generative-computing/mellea"
Documentation = "https://mellea.ai"
Repository = "https://github.com/generative-computing/mellea"
Issues = "https://github.com/generative-computing/mellea/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mellea_crewai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "ollama: tests requiring Ollama backend",
    "openai: tests requiring OpenAI backend",
    "watsonx: tests requiring Watsonx backend",
    "huggingface: tests requiring HuggingFace backend",
    "vllm: tests requiring vLLM backend",
    "litellm: tests requiring LiteLLM backend",
    "llm: tests that make LLM calls",
    "qualitative: tests checking LLM output quality",
    "slow: tests taking >5 minutes",
    "requires_gpu: tests requiring GPU",
    "requires_heavy_ram: tests requiring 48GB+ RAM",
    "requires_api_key: tests requiring external API keys",
    "integration: integration tests with real backends",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "crewai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mellea.*"
ignore_missing_imports = true

[tool.uv.sources]
mellea-integration-core = { path = "../mellea-integration-core" }
