[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mellea-mcp"
version = "0.1.0"
authors = [
    { name = "Mellea Contributors", email = "melleaadmin@ibm.com" },
]
description = "Expose MCP server tools as Mellea tools"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "mellea>=0.4.2",
    "mcp>=1.27.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/generative-computing/mellea-contribs"
Repository = "https://github.com/generative-computing/mellea-contribs"

[tool.hatch.build.targets.wheel]
packages = ["src/mellea_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring a live MCP server",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
